# bitgn-ecom-pac-overfit-test

./: .gitignore  Cargo.toml  INDEX.md  README.en.md  README.md  README.ru.md  TASKS.md  pyproject.toml
bitgn_run/: __init__.py  artifacts.py  cli.py  config.py  runner.py  types.py
docs/: principles.md  results.md
rules/: catalog.toml  inventory.toml  security.toml
scripts/: check_code_limits.py
src/: artifacts.rs  bridge.rs  config.rs  main.rs  runner.rs  types.rs
tools/: bitgn_bridge.py  bitgn_runtime.py  ecom_solver.py  pac1_solver.py
