[project]
name = "bitgn-ecom-run"
version = "0.1.0"
description = "Clean-room BitGN ECOM/PAC code-only runner"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "bitgn-api-connectrpc-python==0.10.0.1.20260515140309+1f9ca1046f73",
    "bitgn-api-protocolbuffers-python==34.1.0.1.20260515140309+1f9ca1046f73",
    "protobuf>=7.34.1",
]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[tool.uv]
package = false
